--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- GoogleAuth:--> 
+
+    <script src="https://apis.google.com/js/platform.js"></script>
+   
+    <title>My Itinerary</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
