working on google auth

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,8 +28,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- GoogleAuth:--> 
-
-    <script src="https://apis.google.com/js/platform.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    <!-- <script src="https://apis.google.com/js/platform.js"></script> -->
    
     <title>My Itinerary</title>
   </head>
