--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+            <!-- bootstrap icons:--> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
         <!-- GoogleAuth:--> 
 
   
